<resources>
    <string name="app_name">Android Workshop</string>

    <string name="title_section1">Værmelding</string>
    <string name="title_section2">Om appen</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="location">Navn på sted eller adresse</string>
    <string name="search">Søk</string>
    <string name="previous_searches">Tidligere søk</string>
    <string name="current_weather">Nå</string>
    <string name="five_day_forecast">5-dagers</string>
    <string name="long_term_forecast">Langtidsvarsel</string>

    <string-array name="months">
        <item>jan</item>
        <item>feb</item>
        <item>mar</item>
        <item>apr</item>
        <item>mai</item>
        <item>jun</item>
        <item>jul</item>
        <item>aug</item>
        <item>sep</item>
        <item>okt</item>
        <item>nov</item>
        <item>des</item>
    </string-array>
    <string name="title_activity_weather_result">WeatherResultActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_forecast">ForecastActivity</string>
    <string name="title_activity_about_app">AboutAppActivity</string>
    <string name="about_app">Denne appen er laget som en del av Android-kurset i Mesaninen. Appen viser værvarselet for et sted akkurat nå eller for 5 dager fremover.</string>
    <string name="android_workshop">Android Workshop</string>
    <string name="copyright">© Faggruppen for mobil, 2015</string>
    <string name="mobile_content_description">Bilde som representerer faggruppen for mobil</string>
</resources>
