<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="no.mesan.mobil.androidworkshop.view.about.AboutAppFragment"
    android:clickable="true"
    android:background="@android:color/white"
    android:padding="16dp"
    android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/abc_text_size_large_material"
        android:textStyle="bold"
        android:text="@string/android_workshop"/>
    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_app" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/mobil"
        android:contentDescription="@string/mobile_content_description" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copyright"/>

</LinearLayout>
