<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="no.mesan.mobil.androidworkshop.view.SearchFragment"
    android:orientation="vertical"
    android:padding="10dp">

    <RadioGroup
        android:id="@+id/radioGroupSearchMode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/radioButtonCurrentWeather"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/current_weather"
            android:checked="true"/>
        <RadioButton
            android:id="@+id/radioButtonFiveDayForecast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/five_day_forecast"/>
        <RadioButton
            android:id="@+id/radioButton16DayForecast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sixteen_day_forecast"/>
    </RadioGroup>
    <EditText
        android:id="@+id/editTextLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/location"/>
    <Button
        android:id="@+id/buttonSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/previous_searches"/>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerViewLocations"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>
